[package]
name = "septblog-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"

mysql = "26.0.0"
json = "0.12.4"
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
actix-cors = "0.7.1"
chrono = "0.4.41"
time = "0.3.41"
rand = "0.9.1"

jsonwebtoken = "9.3.1"

actix-multipart = "0.7.2"
futures-util = "0.3.31"
uuid =  { version = "1.17.0", features = ["v7"] }
tokio = { version = "1.45.1", features = ["fs"] }
mime_guess = "2.0.5"
actix-files = "0.6.6"
infer = "0.19.0"

regex = "1.11.1"

random_word = { version = "0.5.0", features = ["en"] }

log = "0.4.27"
env_logger = "0.11.8"

argon2 = "0.5.3"
rand_core = "0.6"
password-hash = "0.5"

